
8. LUCENE-1623: Properly handle back-compability of 2.3.x indexes that
   contain field names with non-ascii characters.  (Mike Streeton via
   Mike McCandless)

9. LUCENE-1593: MultiSearcher and ParallelMultiSearcher did not break ties (in 
   sort) by doc Id in a consistent manner (i.e., if Sort.FIELD_DOC was used vs. 
   when it wasn't). (Shai Erera via Michael McCandless)

 New features

 1. LUCENE-1411: Added expert API to open an IndexWriter on a prior
    commit, obtained from IndexReader.listCommits.  This makes it
    possible to rollback changes to an index even after you've closed
    the IndexWriter that made the changes, assuming you are using an
    IndexDeletionPolicy that keeps past commits around.  This is useful
    when building transactional support on top of Lucene.  (Mike
    McCandless)

 2. LUCENE-1382: Add an optional arbitrary String "commitUserData" to
    IndexWriter.commit(), which is stored in the segments file and is
    then retrievable via IndexReader.getCommitUserData instance and
    static methods.  (Shalin Shekhar Mangar via Mike McCandless)

 3. LUCENE-1406: Added Arabic analyzer.  (Robert Muir via Grant Ingersoll)

 4. LUCENE-1420: Similarity now has a computeNorm method that allows
    custom Similarity classes to override how norm is computed.  It's
    provided a FieldInvertState instance that contains details from
    inverting the field.  The default impl is boost *
    lengthNorm(numTerms), to be backwards compatible.  Also added
    {set/get}DiscountOverlaps to DefaultSimilarity, to control whether
    overlapping tokens (tokens with 0 position increment) should be
    counted in lengthNorm.  (Andrzej Bialecki via Mike McCandless)
    
 5. Added web-based demo of functionality in contrib's XML Query Parser
    packaged as War file (Mark Harwood)    

 6. LUCENE-1424: Moved constant score query rewrite capability into
    MultiTermQuery, allowing RangeQuery, PrefixQuery and WildcardQuery